--- a/pgso_Billing/Forms/Report_Extension_Slip.rdlc
+++ b/pgso_Billing/Forms/Report_Extension_Slip.rdlc
@@ -336,7 +336,8 @@
                 </Style>
               </TextRun>
               <TextRun>
-                <Value>Provincial Treasurer</Value>
+                <Value>Provincial Treasurer
+This Province</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>9pt</FontSize>
@@ -350,9 +351,9 @@
           </Paragraph>
         </Paragraphs>
         <Top>5.555cm</Top>
-        <Left>2.32437cm</Left>
-        <Height>0.81167cm</Height>
-        <Width>3.58465cm</Width>
+        <Left>2.29792cm</Left>
+        <Height>1.18209cm</Height>
+        <Width>15.0391cm</Width>
         <ZIndex>7</ZIndex>
         <Style>
           <Border>
@@ -377,7 +378,7 @@
             <Style />
           </Paragraph>
         </Paragraphs>
-        <Top>9.09639cm</Top>
+        <Top>9.73139cm</Top>
         <Left>2.29792cm</Left>
         <Height>0.4cm</Height>
         <Width>2.87042cm</Width>
@@ -493,7 +494,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>10.59382cm</Top>
+        <Top>11.22882cm</Top>
         <Left>11.20375cm</Left>
         <Height>0.5cm</Height>
         <Width>6.15974cm</Width>
@@ -737,7 +738,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -839,7 +839,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>9.59382cm</Top>
+        <Top>10.22882cm</Top>
         <Left>3.12223cm</Left>
         <Height>1cm</Height>
         <Width>14.24126cm</Width>
@@ -872,7 +872,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox60</rd:DefaultName>
-        <Top>11.26183cm</Top>
+        <Top>12.21433cm</Top>
         <Left>2.35084cm</Left>
         <Height>0.635cm</Height>
         <Width>3.92875cm</Width>
@@ -918,7 +918,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox60</rd:DefaultName>
-        <Top>12.69375cm</Top>
+        <Top>13.32875cm</Top>
         <Left>4.00403cm</Left>
         <Height>0.89958cm</Height>
         <Width>4.7625cm</Width>
@@ -952,7 +952,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox60</rd:DefaultName>
-        <Top>11.26183cm</Top>
+        <Top>12.21433cm</Top>
         <Left>11.78039cm</Left>
         <Height>0.635cm</Height>
         <Width>1.75917cm</Width>
@@ -1004,7 +1004,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox60</rd:DefaultName>
-        <Top>12.69375cm</Top>
+        <Top>13.32875cm</Top>
         <Left>13.6952cm</Left>
         <Height>0.89958cm</Height>
         <Width>3.66828cm</Width>
@@ -1083,8 +1083,8 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>7.15514cm</Top>
-        <Left>2.32437cm</Left>
+        <Top>7.47792cm</Top>
+        <Left>2.29792cm</Left>
         <Height>0.4cm</Height>
         <Width>3.85819cm</Width>
         <ZIndex>17</ZIndex>
@@ -1158,8 +1158,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>7.15514cm</Top>
-        <Left>6.35895cm</Left>
+        <Top>7.47792cm</Top>
+        <Left>6.3325cm</Left>
         <Height>0.4cm</Height>
         <Width>11.00452cm</Width>
         <ZIndex>18</ZIndex>
@@ -1188,8 +1188,8 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>7.55514cm</Top>
-        <Left>2.32437cm</Left>
+        <Top>7.87792cm</Top>
+        <Left>2.29792cm</Left>
         <Height>0.4cm</Height>
         <Width>3.85819cm</Width>
         <ZIndex>19</ZIndex>
@@ -1263,8 +1263,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>7.55514cm</Top>
-        <Left>6.35895cm</Left>
+        <Top>7.87792cm</Top>
+        <Left>6.3325cm</Left>
         <Height>0.4cm</Height>
         <Width>11.00452cm</Width>
         <ZIndex>20</ZIndex>
@@ -1293,8 +1293,8 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>8.31986cm</Top>
-        <Left>2.32437cm</Left>
+        <Top>9.07792cm</Top>
+        <Left>2.29792cm</Left>
         <Height>0.4cm</Height>
         <Width>3.85819cm</Width>
         <ZIndex>21</ZIndex>
@@ -1312,7 +1312,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>11.00454cm</Width>
+              <Width>11.00452cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1374,10 +1374,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>8.31986cm</Top>
-        <Left>6.35895cm</Left>
+        <Top>9.07792cm</Top>
+        <Left>6.3325cm</Left>
         <Height>0.4cm</Height>
-        <Width>11.00454cm</Width>
+        <Width>11.00452cm</Width>
         <ZIndex>22</ZIndex>
         <Style>
           <Border>
@@ -1404,8 +1404,8 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>7.95514cm</Top>
-        <Left>2.32437cm</Left>
+        <Top>8.67792cm</Top>
+        <Left>2.29792cm</Left>
         <Height>0.4cm</Height>
         <Width>3.85819cm</Width>
         <ZIndex>23</ZIndex>
@@ -1479,8 +1479,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>BillingDataset</DataSetName>
-        <Top>7.95514cm</Top>
-        <Left>6.35895cm</Left>
+        <Top>8.67792cm</Top>
+        <Left>6.3325cm</Left>
         <Height>0.4cm</Height>
         <Width>11.00452cm</Width>
         <ZIndex>24</ZIndex>
@@ -1491,6 +1491,68 @@
           </Border>
         </Style>
       </Tablix>
+      <Textbox Name="txt_Date_of_Use6">
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>Contact Number</Value>
+                <Style>
+                  <FontFamily>Calibri</FontFamily>
+                  <FontSize>9pt</FontSize>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Left</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <Top>8.27792cm</Top>
+        <Left>2.29792cm</Left>
+        <Height>0.4cm</Height>
+        <Width>3.85819cm</Width>
+        <ZIndex>25</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+            <Width>0.25pt</Width>
+          </Border>
+        </Style>
+      </Textbox>
+      <Textbox Name="fld_Requesting_Person_Address7">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=Fields!fld_Contact_Number.Value</Value>
+                <Style>
+                  <FontFamily>Calibri</FontFamily>
+                  <FontSize>9pt</FontSize>
+                  <FontWeight>Bold</FontWeight>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Left</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <Top>8.27792cm</Top>
+        <Left>6.3325cm</Left>
+        <Height>0.4cm</Height>
+        <Width>10.97806cm</Width>
+        <ZIndex>26</ZIndex>
+        <Style>
+          <Border>
+            <Color>LightGrey</Color>
+            <Style>None</Style>
+          </Border>
+        </Style>
+      </Textbox>
     </ReportItems>
     <Height>6in</Height>
     <Style>
