--- a/pgso_Billing/Forms/Report_Billing_Venue_And_Equipment.rdlc
+++ b/pgso_Billing/Forms/Report_Billing_Venue_And_Equipment.rdlc
@@ -383,7 +383,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>PSGO BILLING RECORD REPORT</Value>
+                    <Value>PGSO BILLING RECORD REPORT</Value>
                     <Style>
                       <FontSize>20pt</FontSize>
                       <FontWeight>Bold</FontWeight>
